--- a/master.html
+++ b/master.html
@@ -15,7 +15,7 @@
 
 <div class="table-container">
 
-    <table data-toggle="table" data-search="true" data-url="/data/data-master.json" data-sort-name="date" data-sort-order="asc">
+    <table data-toggle="table" data-search="true" data-url="/data/data.json" data-sort-name="date" data-sort-order="asc">
       <thead>
         <tr>
           <th data-field="date" data-sortable="true">
